--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 bot:
-  token: "MTM5ODkyMDI4NjIwODAwMDA5Mw.G6N5Dv.GOMumrzyHtm1vrFeAU0JVBUhX6BxSqKaBoO1H8"
+  token: "Token"
   guild_id: "1419917974621519884"
 
 main_nations:
